--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,14 @@ body {
 h1 {
   font-size: 60px;
 }
+p {
+  font-family: 'Courier New', cursive;
+  font-size: 30px;
+}
+.playerTurn {
+  font-family: 'Monoton', cursive;
+  font-size: 36px;
+}
 .inputs {
   margin: 50px 0;
 }
